Add register button to nav bar if user is not connected, register done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<div class="fixed top-0 left-0 w-full ">
+    <app-nav ></app-nav>
+</div>
+<div class="pt-8">
+    <router-outlet></router-outlet>
+</div>
+
