Login and Logout done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="fixed top-0 left-0 w-full ">
-    <app-nav ></app-nav>
+<div class="fixed top-0 left-0 w-full">
+  <app-nav></app-nav>
 </div>
 <div class="pt-8">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 
+<p-toast></p-toast>
