--- a/src/app/shared/compos/nav/nav.component.html
+++ b/src/app/shared/compos/nav/nav.component.html
@@ -10,7 +10,12 @@
             </div>
         </ng-template>
         <ng-template pTemplate="end" >
-            <p-button label="S'inscrire" class="mr-2" routerLink="/register" styleClass="p-button-secondary" *ngIf="!isConnected"></p-button>
+            <div class="flex align-items-center" ><p-button label="Se déconnecter" class="mr-2 w-11rem" (onClick)="logout()" styleClass="p-button-secondary" *ngIf="isConnected; else notConnected"></p-button>
+</div>
+        </ng-template>
+        <ng-template #notConnected >
+            <p-button label="S'inscrire" class="mr-2" routerLink="/register" styleClass="p-button-secondary"></p-button>
+            <p-button label="Se connecter" class="mr-2 w-10rem" routerLink="/login" styleClass="p-button-secondary"></p-button>
         </ng-template>
       </p-menubar>
 </nav>
