--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="fixed top-0 left-0 w-full">
-  <app-nav></app-nav>
-</div>
-<div class="pt-8">
+
+<app-nav class="fixed top-0 left-0 w-full"></app-nav>
+
+<main class="mt-8"> 
   <router-outlet></router-outlet>
-</div>
+</main>
 
 <p-toast></p-toast>
