--- a/src/app/provider-card/provider-card.component.html
+++ b/src/app/provider-card/provider-card.component.html
@@ -1,13 +1,14 @@
 <div class="card flex justify-content-center">
   <p-card
-    header="Lama faché"
-    subheader="Qui l'a faché? "
+    header="Type de service"
+    subheader=""
     [style]="{ width: '360px' }"
   >
     <ng-template pTemplate="header">
       <div class="flex align-items-center">
         <p-avatar
-          image="../../assets/lama.jpeg"
+          [image]="imagePresent ? '../../assets/lama.jpeg' : ''"
+          [icon]="imagePresent ? '' : 'pi pi-user'"
           styleClass="mx-3 mt-3"
           size="xlarge"
           shape="circle"
@@ -16,25 +17,19 @@
       </div>
     </ng-template>
     <p>
-      Il était une fois, dans une vallée éloignée, un lama du nom de Carl. Carl
-      était connu pour être le lama le plus zen de tout le troupeau. Il méditait
-      paisiblement, mastiquait de l'herbe avec sérénité et participait à des
-      cours de yoga lama pour rester en forme mentalement et physiquement.
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit quisquam voluptate dolorum! Quos quae voluptatum perferendis deserunt vel atque aperiam iste reprehenderit, harum repudiandae voluptas alias praesentium provident quidem nemo.
 
-      <br /><br />Un jour, cependant, quelque chose perturba la quiétude de
-      Carl. Un groupe de moutons voisins envahit son terrain de pâturage
-      préféré, grignotant allègrement l'herbe sous son nez. Carl, d'ordinaire si
-      paisible, se mit soudainement à grogner et à froncer les sourcils. Il
-      était en mode "lama fâché".
+      <br /><br />
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut laudantium iusto quis doloribus ad obcaecati animi debitis exercitationem ea doloremque incidunt, nam tenetur repellendus eligendi esse veniam accusantium quae?
     </p>
-    <ng-template pTemplate="footer">
-      <p-button label="Save" icon="pi pi-check"></p-button>
-      <p-button
-        label="Cancel"
-        icon="pi pi-times"
-        styleClass="p-button-secondary"
-        [style]="{ 'margin-left': '.5em' }"
-      ></p-button>
-    </ng-template>
+    <p-button
+      label="Réserver"
+      icon="pi pi-angle-double-right"
+      styleClass="z-index: 0;"
+      [text]="true"
+      [raised]="true"
+      severity="secondary"
+    ></p-button>
   </p-card>
 </div>
