--- a/src/app/service-provider/dashboard/dashboard.component.html
+++ b/src/app/service-provider/dashboard/dashboard.component.html
@@ -7,11 +7,11 @@
       size="xlarge"
       shape="circle"
     ></p-avatar>
-    <div><b>Fellaini Marouane</b></div>
+    <div><b>{{serviceProvider?.firstName}} {{serviceProvider?.lastName}}</b></div>
   </div>
-  <div class="grid">
-    <app-service-type
-    *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9]"
+  <div class="grid"  >
+    <app-service-type *ngFor="let servicesType of serviceTypes"
+    [servicesType]="servicesType"
     class="col-4">
     </app-service-type>
   </div>
